--- a/gb/20/10/25/n12500609.md
+++ b/gb/20/10/25/n12500609.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/veieog323/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/veieog323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/veieog323/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/veieog323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/veieog323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/veieog323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/veieog323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/veieog323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/veieog323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/veieog323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/veieog323/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/veieog323/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/veieog323/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/veieog323/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/veieog323/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>西澳建房补贴修订：开工延期6个月</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/515-1-600x400.jpg" />
 <h6>图为珀斯一家土地建房配套建案的新房展示。（林文责/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年10月25日讯】<span lang="zh-CN"><span lang="zh-TW">（大纪元记者杨新云澳洲珀斯综合报导）</span><span lang="zh-TW">在房地产业界长期呼吁之下，本周<ahref="https://github.com/veieog323/djy/blob/master/gb/tag/%E8%A5%BF%E6%BE%B3%E6%94%BF%E5%BA%9C.md#1">西澳政府</a>终于宣布，将符合领取建房补贴要求的新房建设开工时限延长</span></span>6<span lang="zh-CN"><span lang="zh-TW">个月。然而，专业人士也提醒买家，并非全部房产建案都受惠于此新政，<ahref="https://github.com/veieog323/djy/blob/master/gb/tag/%E4%B9%B0%E5%9C%B0%E5%BB%BA%E6%88%BF.md#1">买地建房</a>仍需考虑其它因素。</span></span></p>
-<p lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">为了应对中共病毒（又称新冠病毒，</span></span>COVID-19<span lang="zh-CN"><span lang="zh-TW">）对澳洲经济与建筑业的冲击，联邦政府与西澳州政府几个月前分别出台建房现金补贴经济刺激计划。在西澳，购房者需要在今年</span></span>12<span lang="zh-CN"><span lang="zh-TW">月</span></span>31<span lang="zh-CN"><span lang="zh-TW">日之前与建商签订建房合同；或是在单层房地产开发项目完工之前购买物业如联排房（</span></span>Townhouse<span lang="zh-CN"><span lang="zh-TW">），就可领取<ahref="https://github.com/veieog323/djy/blob/master/gb/tag/%E8%A5%BF%E6%BE%B3%E6%94%BF%E5%BA%9C.md#1">西澳政府</a>颁布的</span></span>2<span lang="zh-CN"><span lang="zh-TW">万澳元现金补贴。对于建房的买家，若要符合领取建房补贴要求，其房产建设必须在签约后</span></span>6<span lang="zh-CN"><span lang="zh-TW">个月之内开工。</span></span></p>
+	<p>【大纪元2020年10月25日讯】<span lang="zh-CN"><span lang="zh-TW">（大纪元记者杨新云澳洲珀斯综合报导）</span><span lang="zh-TW">在房地产业界长期呼吁之下，本周<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A5%BF%E6%BE%B3%E6%94%BF%E5%BA%9C.md#1">西澳政府</a>终于宣布，将符合领取建房补贴要求的新房建设开工时限延长</span></span>6<span lang="zh-CN"><span lang="zh-TW">个月。然而，专业人士也提醒买家，并非全部房产建案都受惠于此新政，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%B0%E5%9C%B0%E5%BB%BA%E6%88%BF.md#1">买地建房</a>仍需考虑其它因素。</span></span></p>
+<p lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">为了应对中共病毒（又称新冠病毒，</span></span>COVID-19<span lang="zh-CN"><span lang="zh-TW">）对澳洲经济与建筑业的冲击，联邦政府与西澳州政府几个月前分别出台建房现金补贴经济刺激计划。在西澳，购房者需要在今年</span></span>12<span lang="zh-CN"><span lang="zh-TW">月</span></span>31<span lang="zh-CN"><span lang="zh-TW">日之前与建商签订建房合同；或是在单层房地产开发项目完工之前购买物业如联排房（</span></span>Townhouse<span lang="zh-CN"><span lang="zh-TW">），就可领取<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A5%BF%E6%BE%B3%E6%94%BF%E5%BA%9C.md#1">西澳政府</a>颁布的</span></span>2<span lang="zh-CN"><span lang="zh-TW">万澳元现金补贴。对于建房的买家，若要符合领取建房补贴要求，其房产建设必须在签约后</span></span>6<span lang="zh-CN"><span lang="zh-TW">个月之内开工。</span></span></p>
 <p lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">然而，建房业界与买家都认为</span></span>6<span lang="zh-CN"><span lang="zh-TW">个月的开工时限太短，并呼吁政府延长开工时间。本周，西澳政府推出了延长</span></span>6<span lang="zh-CN"><span lang="zh-TW">个月开工时限的新政策，即房屋建设工作在（合同签订后）一年内开始，建房买家就可以领取建房补贴。</span></span></p>
 <p lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">西澳财长怀亚特（</span></span>Ben Wyatt<span lang="zh-CN"><span lang="zh-TW">）表示，（西澳政府的）建房补贴计划（</span></span>Building Bonus<span lang="zh-CN"><span lang="zh-TW">）实施的非常成功，为建房行业创造了大量的建房活动，</span></span>6<span lang="zh-CN"><span lang="zh-TW">个月的开工时间对于很多建房买家来说，太短了。</span></span></p>
 <p lang="zh-TW" align="justify">他说：“我们密切追踪了建房补贴计划的进度，这项计划的调整将使许多潜在的建房买家有更多的时间来确保其能够获得补贴。”</p>
@@ -16,7 +16,7 @@
 <p lang="zh-TW" align="justify">房地产业界对政府出台的这项新政表示欢迎。</p>
 <p lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">住房产业协会（</span></span>Housing Industry Association<span lang="zh-CN"><span lang="zh-TW">，简称</span></span>HIA<span lang="zh-CN"><span lang="zh-TW">）西澳分部执行董事</span></span>Cath Hart<span lang="zh-CN"><span lang="zh-TW">女士说，建房开工延期政策明智之举，将使建房工作流程更加顺畅，并对买家、创造工作机会与建商各方面都有利。她说：“新政减轻了买家的压力，因为他们担心由于获得地契的土地及劳动力的短缺、贷款审批与地方政府的延误，而错过领取补贴的机会。”</span></span></p>
 <p lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">西澳建筑协会（</span></span>Master Builders Association of WA<span lang="zh-CN"><span lang="zh-TW">）执行董事</span></span>John Gelavis<span lang="zh-CN"><span lang="zh-TW">也表示，随着建房交易量的飙升，业界在近几个月开始施工安全与相关的施工人员的短缺引发担忧。他说：“建房开工延期新政将支持建房业能够在规定的时间内建造高质量的房屋，并以最安全的施工方式做到这一点。”</span></span></p>
-<h2 lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">专家：并非所有建案都从新政受益 <ahref="https://github.com/veieog323/djy/blob/master/gb/tag/%E4%B9%B0%E5%9C%B0%E5%BB%BA%E6%88%BF.md#1">买地建房</a>需慎行</span></span></h2>
+<h2 lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">专家：并非所有建案都从新政受益 <ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%B0%E5%9C%B0%E5%BB%BA%E6%88%BF.md#1">买地建房</a>需慎行</span></span></h2>
 <p lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">尽管该新政受到主要行业机构的赞许与支持，然而，新房建筑经纪公司（</span></span>New Home Building Brokers<span lang="zh-CN"><span lang="zh-TW">）董事总经理</span></span>Tristan Kirkham<span lang="zh-CN"><span lang="zh-TW">表示了一些担忧，尤其是对于珀斯富人区</span></span>&#8211;<span lang="zh-CN"><span lang="zh-TW">西区的住房密度填充市场（</span></span>western suburbs infill market<span lang="zh-CN"><span lang="zh-TW">）。</span></span></p>
 <p lang="zh-TW" align="justify"><span lang="zh-CN"><span lang="zh-TW">他说，这一新政对于首次购房者市场与建筑商都有利，但是有些地区房屋建筑商需要制定更详细的计划以获得批准，这存在很大的时间滞后问题。因此，这可能会导致买家错过签署合同的最后期限—今年</span></span>12<span lang="zh-CN"><span lang="zh-TW">月</span></span>31<span lang="zh-CN"><span lang="zh-TW">日。</span></span></p>
 <p lang="zh-TW" align="justify">Kirkham<span lang="zh-CN"><span lang="zh-TW">说：“房屋设计与费用评估需要</span></span>8<span lang="zh-CN"><span lang="zh-TW">周，之后买家需要向地方政府递交建房申请，政府至少需要</span></span>60-90<span lang="zh-CN"><span lang="zh-TW">天的审批时间，如果是因为对当地的建房密度</span></span>R-codes<span lang="zh-CN"><span lang="zh-TW">理解错误而需要对建案进行大幅调整，那么，买家可能还需要广告营销，或是需要通过地方法院介入调解，等修改后的建案落实后，才能与建商签订建房合同。”</span></span></p>
@@ -29,42 +29,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/8/1/n12299633.md#1">12月西澳7500个地块拟上市</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/8/20/n12345320.md#1">二季度珀斯土地销量增长126% 破纪录</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/15/n12477389.md#1">政府建房补贴申请者逾万 资金兑现不到800</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/18/n12485191.md#1">南澳部分建筑商已停签新合同</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/1/n12299633.md#1">12月西澳7500个地块拟上市</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/20/n12345320.md#1">二季度珀斯土地销量增长126% 破纪录</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/15/n12477389.md#1">政府建房补贴申请者逾万 资金兑现不到800</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/18/n12485191.md#1">南澳部分建筑商已停签新合同</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/10/n11512510.md#1" target="_blank">杨宁：从瑞典最豪华战舰沉没说中共的结局</a></li><li><a href="https://github.com/veieog323/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/29/n7787098.md#1" target="_blank">81岁病危老人一夜之间病好了</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/14/n12475763.md#1">轮回转生名案：4岁娃难忘前生情 丈夫儿子来相认</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/9/30/n12442831.md#1">《圣经》与《推背图》预言的应验与变换3</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/9/3/n12378293.md#1">【西安事变?蒋宋夫妇】引狼入室 西安谋主</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/9/30/n12442832.md#1">《圣经》与《推背图》预言的应验与变换4</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/28/n12507118.md#1">【重播】FBI：逮捕5人 中共猎狐行动令人发指</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/28/n12508207.md#1">【珍言真语】黄伟国：港八大学遭赤化 分三类型</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/28/n12508541.md#1">【薇羽看世间】加强版川普 频说错话的拜登</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/27/n12504450.md#1">【拍案惊奇】拜登家爆更惊人丑闻 五中开幕不开心</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/26/n12503917.md#1">【新闻看点】五中大戏登场 专家预测川普赢</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/27/n12505552.md#1">美国11岁才女购露营车 自己装修成温馨小家</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/25/n12501492.md#1">迎候老婆高圆圆下班 赵又廷俏皮蹲下请安</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/27/n12504942.md#1">袁惟仁惊传跌倒再陷昏迷 住进加护病房</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/27/n12504715.md#1">TWICE盼为粉丝带来力量 正规二辑32区iTunes夺冠</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/26/n12502059.md#1">洗衣店时尚阿公阿嬷红到国外 引蔡英文拜访</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/26/n12503459.md#1">脾胃喜欢甜的 5种甘味食物补脾养胃、防胃病</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/28/n12507771.md#1">前3次大选预测都准 “候选人饼干”看好川普</a></li>
-<li><a href="https://github.com/veieog323/djy/blob/master/gb/20/10/23/n12496965.md#1">心悸、胃胀是驼背惹的祸 端正姿势预防一身病</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/veieog323/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/veieog323/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/25/n12500609.htm">西澳建房补贴修订：开工延期6个月</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/25/n12500609.htm">西澳建房补贴修订：开工延期6个月</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/veieog323/djy/blob/master/gb/20/10/25/n12500609.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/veieog323/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/veieog323/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/veieog323/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/veieog323/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/veieog323/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/25/n12500609.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
